<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
  android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

<!-- There are various layouts that can be used.
Constraint is the simplest to organize using the built in previewer -->

  <TextView
    android:id="@+id/titleText"
    android:layout_width="163dp"
    android:layout_height="46dp"
    android:layout_marginStart="36dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="212dp"
    android:text="@string/app_name"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <!-- Each item in the Constraint layout requires at least
  1 vertical and horizontal constraint specified -->

  <TextView
    android:id="@+id/versionText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="84dp"
    android:text="Placeholder text"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<!-- It is preferred to reference text through a separate xml file.
  I am using hard-coded text above because version text is never seen and makes previewer easier to use -->

  <!-- The referenced text is stored in the "values" directory, where the format is @xmlFileName/resourceName -->

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/appIDTextTitle"
    android:layout_width="261dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginTop="36dp"
    android:layout_marginEnd="1dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/titleText"/>

  <Button
    android:id="@+id/startStopButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="160dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="160dp"
    android:text="@string/start"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/altitudeTextField" />

  <Button
    android:id="@+id/registerButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="155dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="155dp"
    android:text="@string/register_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appIDTextTitle" />

  <TextView
    android:id="@+id/receiverNameTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="58dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="252dp"
    android:text="@string/receiver_name_label"
    android:textSize="15sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registerButton" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/receiverNameTextField"
    android:layout_width="202dp"
    android:layout_height="49dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/receiverNameTextView">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/receiver_name_label"
      android:focusableInTouchMode="false" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/getReceiverButton"
    android:layout_width="113dp"
    android:layout_height="57dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="56dp"
    android:layout_marginEnd="17dp"
    android:text="@string/receiver_name_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.421"
    app:layout_constraintStart_toEndOf="@+id/receiverNameTextField"
    app:layout_constraintTop_toBottomOf="@+id/registerButton" />

  <TextView
    android:id="@+id/latitudeTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="173dp"
    android:layout_marginTop="35dp"
    android:layout_marginEnd="163dp"
    android:text="@string/latitude"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/receiverNameTextField" />

  <TextView
    android:id="@+id/longitudeTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="157dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="163dp"
    android:text="@string/longitude"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/latitudeTextField" />

  <TextView
    android:id="@+id/altitudeTextView"
    android:layout_width="72dp"
    android:layout_height="29dp"
    android:layout_marginStart="169dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="170dp"
    android:text="@string/altitude"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/longitudeTextField" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/latitudeTextField"
    android:layout_width="294dp"
    android:layout_height="53dp"
    android:layout_marginStart="58dp"
    android:layout_marginTop="7dp"
    android:layout_marginEnd="59dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/latitudeTextView">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/latitude"
      android:focusableInTouchMode="false" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/longitudeTextField"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_marginStart="53dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="58dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/longitudeTextView">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/longitude"
      android:focusableInTouchMode="false" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/altitudeTextField"
    android:layout_width="297dp"
    android:layout_height="56dp"
    android:layout_marginStart="57dp"
    android:layout_marginEnd="57dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/altitudeTextView">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/altitude"
      android:focusableInTouchMode="false" />
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
